[package]
description = "Parity Ethereum Keys Generator"
name = "ethkey"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
edit-distance = "2.0"
parity-crypto = "0.4.0"
#eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
secp256k1 = { version = "0.15", features = ["rand", "recovery"] }
ethereum-types = "0.6.0"
lazy_static = "1.3"
log = "0.4"
parity-wordlist = "1.3"
quick-error = "1.2.2"
rand = "0.6"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
tiny-keccak = "1.4"
zeroize = "0.9.1"
